--- a/recognizer/src/main/res/layout/activity_main.xml
+++ b/recognizer/src/main/res/layout/activity_main.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     android:id="@+id/activity_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="uestc.xfj.recognizer.MainActivity">
+    tools:context="uestc.xfj.recognizer.MainActivity"
+    xmlns:toolbar="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-</RelativeLayout>
+        android:background="@color/maincolor"
+        android:minHeight="55dp"
+        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        toolbar:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:elevation="10dp">
+    </android.support.v7.widget.Toolbar>
+
+    <ImageView
+        android:id="@+id/img_show"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
