明月松间照

--- a/recognizer/src/main/res/layout/activity_main.xml
+++ b/recognizer/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="uestc.xfj.recognizer.MainActivity"
+    tools:context="uestc.xfj.recognizer.activity.MainActivity"
+    android:background="@color/white"
+    android:orientation="vertical"
     xmlns:toolbar="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.Toolbar
@@ -22,5 +24,7 @@
     <ImageView
         android:id="@+id/img_show"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:scaleType="fitXY"/>
 </LinearLayout>
