--- a/recognizer/src/main/res/layout/layout_popup.xml
+++ b/recognizer/src/main/res/layout/layout_popup.xml
@@ -1,10 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:htext="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-    android:background="@color/white">
+              android:background="@color/black"
+              android:weightSum="1">
 
+    <com.hanks.htextview.HTextView
+        android:id="@+id/origin"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#000000"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:text="是否用原图上传"
+        htext:animateType="line"/>
 
+    <com.hanks.htextview.HTextView
+        android:id="@+id/gray"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#000000"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:text="是否用灰度化之后的图上传"
+        htext:animateType="line"/>
 
+    <com.hanks.htextview.HTextView
+        android:id="@+id/two"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#000000"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:text="是否用二值化之后的图上传"
+        htext:animateType="line"
+        android:layout_weight="0.01"/>
+
+    <com.hanks.htextview.HTextView
+        android:id="@+id/noise"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#000000"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:text="是否用去噪后的图上传"
+        htext:animateType="line"/>
 </LinearLayout>
