--- a/recognizer/src/main/res/layout/activity_result.xml
+++ b/recognizer/src/main/res/layout/activity_result.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_result"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,16 +34,18 @@
             android:textColor="@color/white"
             android:textSize="20sp"/>
     </RelativeLayout>
-    <TextView
-        android:id="@+id/recognizer_result"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:gravity="center"
-        android:maxLines="500"
-        android:textColor="@color/black"
-        android:scrollbars="vertical"
-        android:textSize="30sp"/>
-
-
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/recognizer_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center"
+            android:maxLines="500"
+            android:textColor="@color/black"
+            android:scrollbars="vertical"
+            android:textSize="30sp"/>
+    </ScrollView>
 </LinearLayout>
